style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
    scrollbar-width: none;
}

.header{
    min-height: 100vh;
    min-width: 100%;
    background-color: #111111;
    background-position: center;
    background-size: cover;
    transition: 0.25s;
}
nav{
    position: fixed;
    width: 90vw;
    margin-right: 10%;
    display: flex;
    flex: 1;
    padding: 1% 6%;
    justify-content: space-between;
    align-items: center;
    background-color: #151515;
    border-radius: 0px 0px 10px 10px;
    box-shadow: 0px 10px 10px rgba(0, 0, 0, 25%);
    flex: 1;

}
nav img{
    width: 50px;
    border-radius: 100%;
    border: 3px solid #cfcfcf;
    box-shadow: 0px 0px 20px #00000080;
    display: flex;
    flex: auto;
    transition: 0.25s;
}
.nav-links{
    flex: 1;
    text-align: right;
}
.nav-links ul li{
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;
}
.nav-links ul li a{
    color: white;
    text-decoration: none;
    font-size: 18px;
    text-shadow: 0px 0px 5px #00000080;
    transition: 0.25s;
}
.nav-links ul li a:hover{
    color: #ff0e5e;
    text-shadow: 0px 5px 15px #00000080;

    transition: 0.25s;
}
.nav-links ul li::after{
    content: '';
    width: 0%;
    height: 2px;
    background: #ff0e5e;
    display: block;
    margin: auto;
    transition: 0.25s;
}
.nav-btn{
    cursor: pointer;
    text-decoration: none;
    margin: -10px;
    flex: 1;
    border-radius: 5px;
    border: none;
    font-family: Poppins;
    font-size: 0.8rem;
    font-weight: bold;
    background: #303030;
    color: white;
    padding: 5px 15px;
    box-shadow: 5px 5px 5px #00000030;
    text-shadow: 2px 2px 2px #00000030;
    transition: 0.15s;
}

.nav-btn:hover {
    background: #DC245B;
    transform: scale(1.1, 1.1);
}
.nav-btn:active {
    background: #FF004C;
    transform: scale(0.9, 0.9);
}
.text-box{
    width: 90%;
    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    align-content: space-between;
    display: flex;
    flex-direction: column;
}
.home-btns{
    display: inline-flex;
    align-items: center;
    flex: 1;
    align-self: center;
}
.text-box h1{
    font-size: 4rem;
    text-shadow: 5px 10px 10px #00000080;
    padding-bottom: 20px;
    transition: 0.25s;
}
.text-box p{
    margin: 10px 0 40px;
    font-size: 1.2rem;
    text-shadow: 2px 5px 5px #00000080;
    color: #dddddd;
    transition: 0.25s;
}
.hero-btn{
    display: inline-flex;
    font-size: 16px;
    position: relative;
    cursor: pointer;
    text-decoration: none;
    margin: 5px 10px;
    flex: 1;
    align-items: center;
    justify-content: center;
    min-width: 160px;
    border-radius: 10px;
    border: none;
    font-family: Poppins;
    font-size: 24px;
    font-weight: bold;
    background: #cfcfcf;
    color: #111111;
    padding: 10px 25px;
    box-shadow: 5px 5px 5px #00000030;
    text-shadow: 2px 2px 2px #00000030;
    transition: 0.15s;
}

.hero-btn:hover {
    background: #DC245B;
    transform: scale(1.1, 1.1);
}
.hero-btn:active {
    background: #FF004C;
    transform: scale(0.9, 0.9);
}

nav .uil{
    display: none;
}

/* Footer */
.footer{
    width: 100%;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 30px;
    background-color: #050505;
    border-top: 5px solid #222222;
    color: white;
}
.footer h4{
    margin: 10px;
    font-weight: 600;
    font-size: 24px;
}
.icons .uil{
    color: #777777;
    font-size: 20px;
    margin: 0 13px;
    cursor: pointer;
    padding: 18px 0;
    transition: 0.25s;
}
.icons .uil:hover{
    color: #ff0e5e;
    transition: 0.25s;
}


@media(max-width: 750px){
    html, body {overflow-x: hidden;}
    .text-box h1{
        font-size: 32px;
    }
    .text-box p{
        font-size: 14px;
    }
    .nav-links ul li{
        display: flex;
        padding-bottom: 6px;
    }
    .nav-links{
        position: absolute;
        background: #1b1b1b;
        border-top-left-radius: 10px;
        border-bottom-left-radius: 10px;
        height: 100vh;
        width: 250px;
        margin-right: 0px;
        top: 0;
        right: -300px;
        text-align: left;
        box-shadow: -10px 0px 20px #00000050;
        z-index: 2;
        transition: 0.25s;
    }
    nav .uil{
        display: block;
        color: #ffffff;
        margin: 20px;
        padding-right: 10%;
        font-size: 24px;
        cursor: pointer;
        text-shadow: 0px 5px 2px #00000080;
        transition: 0.25s;
    }
    nav .uil:hover{
        color: #ff0e5e;
        text-shadow: 0px 0px 10px #00000080;
        transition: 0.25s;
    }
    .nav-links ul{
        padding: 30px;
    }
    .nav-btn{
        margin: 0px;
        font-size: 1rem;
    }
    .hero-btn{
        font-size: 1.2rem;
        padding: 10px 24px;
        flex: 1;
        width: 30%;
    }
    .home-btns{
        flex-direction: column;
        justify-content: center;
        align-self: stretch;
    }
}

@media(prefers-color-scheme: light) {
    .header{
        background: whitesmoke;
        transition: 0.25s;
    }
    nav{
        background: white;
    }
    nav .uil{
        color: #111111;
        text-shadow: 2px 2px 5px #00000030;
    }
    .text-box{
        color: #111111;
        transition: 0.25s;
    }
    .text-box h1{
        text-shadow: 5px 5px 15px #00000050;
        transition: 0.25s;
    }
    .text-box p{
        color: #111111;
        text-shadow: 2px 2px 5px #00000050;
        transition: 0.25s;
    }
    .hero-btn{
        background: #111111;
        color: #ffffff;
        transition: 0.25s;
    }
}

